Moved some code from ConsoleApp to ConsoleAppClassLibrary

--- a/UnifierWebServicesLibrary/TestConsoleApp/TestConsoleApp.csproj
+++ b/UnifierWebServicesLibrary/TestConsoleApp/TestConsoleApp.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BusinessProcessLibrary\BusinessProcessLibrary.csproj" />
+    <ProjectReference Include="..\ConsoleAppLibrary\ConsoleAppLibrary.csproj" />
     <ProjectReference Include="..\UnifierWebServicesLibrary\UnifierWebServicesLibrary.csproj" />
   </ItemGroup>
 
